--- a/site/layouts/partials/blog.html
+++ b/site/layouts/partials/blog.html
@@ -1,19 +1,22 @@
-<div class="bg-off-white pv4">
+<div class="bg-off-white pv4 tc">
 	<div class="ph3 mw7 center">
 
-		<h2 class="f2 b lh-title mb3">Latest stories</h2>
+		<h2 class="f4 b lh-title mb3">What Our Clients Are Saying</h2>
 
-		<div class="w-100 flex-ns mhn1-ns flex-wrap mb3">
-			{{ range first 4 (where .Data.Pages "Type" "post") }}
-				<div class="ph1-ns w-50-ns flex">
-					{{ .Render "li" }}
+		<div class="mw7 center">
+			<ul class="flex-ns flex-wrap mhn1-ns pa3">
+				{{ range (.Paginator 4).Pages.ByPublishDate.Reverse }}
+				<div class="w-50-ns ph1-ns flex">
+					{{ .Render "li"}}
 				</div>
-			{{ end }}
+				{{ end }}
+			</ul>
+			{{ partial "pagination" . }}
 		</div>
 
-		<div class="tc">
+		{{/*  <div class="tc">
 			<a href="/post" class="btn raise">Read more</a>
-		</div>
+		</div>  */}}
 
 	</div>
 </div>
