--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -4,8 +4,9 @@
 
 		<div class="measure-narrow center mb4">
 
-			<img src="/img/logo.svg" alt="Kaldi logo" class="db w4 center mb4 br0">
-			<p class="f3 lh-title light-gray b tc mb2">Newsletter subscribe</p>
+			{{/*  <img src="/img/logo.svg" alt="Kaldi logo" class="db w4 center mb4 br0">  */}}
+			<h1 class="db b w6 center mb4 br0 f3 primary">Flores Tree Service</h1>
+			<p class="f3 lh-title light-gray b tc mb2">Schedule a Consultation</p>
 			<p>Get awesome news from us in your inbox every two weeks. Be the first to learn about new products.</p>
 
 			{{ partial "newsletter-form" . }}
@@ -15,12 +16,13 @@
 		<div class="flex-ns justify-between">
 
 			<div>
-				<h3 class="f4 b lh-title mb1 primary">Kaldi</h3>
+				<h3 class="f4 b lh-title mb1 primary">Flores Tree Service</h3>
 				<ul class="mb3">
 					<li><a href="/" class="link">Home</a></li>
-					<li><a href="/products" class="link">Our products</a></li>
-					<li><a href="/values" class="link">About</a></li>
-					<li><a href="/post" class="link">Blog</a></li>
+					<li><a href="/about-us" class="link">About Us</a></li>
+					<li><a href="/services" class="link">Our Services</a></li>
+					{{/*  <li><a href="/gallery" class="link">Gallery</a></li>  */}}
+					{{/*  <li><a href="/post" class="link">Blog</a></li>  */}}
 					<li><a href="/contact" class="link">Contact</a></li>
 				</ul>
 			</div>
@@ -28,12 +30,12 @@
 			<div>
 				<h3 class="f4 b lh-title mb1 primary">Find out more</h3>
 				<ul class="mb3">
-					<li><a href="/post/jamaica-blue/" class="link">Latest offers</a></li>
-					<li><a href="/contact" class="link">Schedule and appointment</a></li>
+					{{/*  <li><a href="/post/jamaica-blue/" class="link">Latest offers</a></li>  */}}
+					<li><a href="/contact" class="link">Schedule a consultation</a></li>
 				</ul>
 			</div>
 
-			<div>
+			{{/*  <div>
 				<h3 class="f4 b lh-title mb2 primary">Social media</h3>
 				<ul class="mhn2">
 					{{ partial "social-icon" (dict "link" "#" "svg" "icons-facebook") }}
@@ -41,9 +43,12 @@
 					{{ partial "social-icon" (dict "link" "#" "svg" "icons-instagram") }}
 					{{ partial "social-icon" (dict "link" "#" "svg" "icons-vimeo") }}
 				</ul>
-			</div>
+			</div>  */}}
 
 		</div>
+	</div>
+	<div class="center tc">
+		<p class="center tc">Copyright © 2022 Flores Tree Services. All rights reserved. </p>
 	</div>
 
 </footer>
