--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,8 +1,9 @@
 <nav data-nav class="flex justify-between items-center center bg-white divider-grey relative">
 
 	<!-- Logo -->
-	<a href="/" class="pa3 db mr4 h-100 w3 flex-none">
-		<img src="/img/logo.svg" alt="Kaldi logo" class="br0 db mb0 w-100"/>
+	<a href="/" class="pa3 db mr4 h-100 flex-none">
+		<h1 class="br0 db mb0 w-100">Flores Tree Service</h1>
+		{{/*  <img src="/img/logo.svg" alt="Kaldi logo" class="br0 db mb0 w-100"/>  */}}
 	</a>
 
 	<!-- Primary Nav -->
@@ -15,11 +16,11 @@
 	</div>
 
 	<ul class="flex b grey-3 nav-menu">
-		<li><a href="/products" class="pa3 no-underline db">Products</a></li>
+		<li><a href="/about-us" class="pa3 no-underline db">About Us</a></li>
 
-		<li><a href="/values" class="pa3 no-underline db">Values</a></li>
+		<li><a href="/services" class="pa3 no-underline db">Our Services</a></li>
 
-		<li><a href="/post" class="pa3 no-underline db">Blog</a></li>
+		{{/*  <li><a href="/post" class="pa3 no-underline db">Gallery</a></li>  */}}
 
 		<li><a href="/contact" class="pa3 no-underline db">Contact</a></li>
 	</ul>
