Add contact page sections

--- a/site/layouts/partials/short-text.html
+++ b/site/layouts/partials/short-text.html
@@ -1,6 +1,12 @@
 <div class="bg-grey-1 pv4">
-  <div class="flex-l mhn1-l ph3 center mw7">
+  <div class="flex-l mhn1-l ph3 center mw7 pv3">
     <h2 class="f2 b lh-title mb2 w-40-l">{{.heading}}</h2>
     <p class="w-60-l mb0">{{.text}}</p>
+  </div>
+  <div class="tc pv3">
+    <a href="/contact" class="btn raise">Get a quote</a>
+    <button class="btn raise">
+      <a href="tel: 888-888-8888">Call: 888-888-8888</a>
+    </button>
   </div>
 </div>
