--- a/site/layouts/section/contact.html
+++ b/site/layouts/section/contact.html
@@ -2,15 +2,16 @@
 
 <div class="ph3 bg-off-white">
 	<div class="center mw6 pv3">
-
-		<img src="{{ .Params.logo }}" alt="" class="db w4 center pv4">
+		<h1 class="tc f4 b pb4">Flores Tree Services</h1>
+		{{/*  <img src="{{ .Params.logo }}" alt="" class="db w4 center pv4">  */}}
 
 		{{ .Content }}
 
-		<div class="flex-ns mb3">
+		<div class="flex-ns mb3 flex-wrap">
 	        	{{ range .Params.contact_entries }}
 				<div>
 					<h4 class="f4 b lh-title mb2 primary">{{ .heading }}</h4>
+					<a href="tel: {{ .number }}" >{{ .number }}</a>
 					<p>{{ .text }}</p>
 				</div>
 			{{ end }}
