--- a/src/css/main.css
+++ b/src/css/main.css
@@ -38,6 +38,7 @@
 @import './imports/_border-style';
 @import './imports/_border-widths';
 @import './imports/_border-colors';
+@import './imports/_carousel.css';
 @import './imports/_code';
 @import './imports/_coordinates';
 @import './imports/_clears';
@@ -51,6 +52,7 @@
 @import './imports/_line-height';
 @import './imports/_links';
 @import './imports/_lists';
+@import './imports/_margin';
 @import './imports/_max-widths';
 @import './imports/_widths';
 @import './imports/_overflow';
