--- a/site/layouts/partials/contact-form.html
+++ b/site/layouts/partials/contact-form.html
@@ -1,4 +1,6 @@
 <!-- Contact -->
+{{/*  add a banner and separate sections into columns
+consider adding certification images  */}}
 <div class="mb4">
   <h4 class="f3 b lh-title mb3 tc">Drop us a line below</h4>
 
