--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -15,11 +15,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
 
 	<!-- Favicons -->
-	<link rel="apple-touch-icon" sizes="180x180" href="/img/leaf.ico">
+	<link rel="icon" sizes="180x180" href="/img/leaf.ico">
 	<link rel="icon" type="image/png" href="/img/leaf.ico" sizes="32x32">
 	<link rel="icon" type="image/png" href="/img/leaf.ico" sizes="16x16">
-	<link rel="manifest" href="/manifest.json">
-	<link rel="mask-icon" href="/img/leaf.ico" color="#ff4400">
+	{{/*  <link rel="manifest" href="/manifest.json">  */}}
+	<link rel="icon" href="/img/leaf.ico" color="#ff4400">
 	<meta name="theme-color" content="#fff">
 
 	<!-- Open Graph -->
