--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -2,22 +2,11 @@
 
 	<div class="mw7 center pt3">
 
-		<div class="measure-narrow center mb4">
+		{{/*  <div class="flex-ns justify-between">  */}}
 
-			{{/*  <img src="/img/logo.svg" alt="Kaldi logo" class="db w4 center mb4 br0">  */}}
-			<h1 class="db b w6 center mb4 br0 f3 primary">Flores Tree Service</h1>
-			<p class="f3 lh-title light-gray b tc mb2">Schedule a Consultation</p>
-			<p>Get awesome news from us in your inbox every two weeks. Be the first to learn about new products.</p>
-
-			{{ partial "newsletter-form" . }}
-
-		</div>
-
-		<div class="flex-ns justify-between">
-
-			<div>
-				<h3 class="f4 b lh-title mb1 primary">Flores Tree Service</h3>
-				<ul class="mb3">
+			<div class="center f6">
+				{{/*  <h3 class="f4 b lh-title mb1 primary">Flores Tree Service</h3>  */}}
+				<ul class="mb3 flex-ns center justify-evenly pb4">
 					<li><a href="/" class="link">Home</a></li>
 					<li><a href="/about-us" class="link">About Us</a></li>
 					<li><a href="/services" class="link">Our Services</a></li>
@@ -27,13 +16,14 @@
 				</ul>
 			</div>
 
-			<div>
+			
+			{{/*  <div>
 				<h3 class="f4 b lh-title mb1 primary">Find out more</h3>
 				<ul class="mb3">
-					{{/*  <li><a href="/post/jamaica-blue/" class="link">Latest offers</a></li>  */}}
+					<li><a href="/post/jamaica-blue/" class="link">Latest offers</a></li>
 					<li><a href="/contact" class="link">Schedule a consultation</a></li>
 				</ul>
-			</div>
+			</div>  */}}
 
 			{{/*  <div>
 				<h3 class="f4 b lh-title mb2 primary">Social media</h3>
@@ -45,9 +35,9 @@
 				</ul>
 			</div>  */}}
 
-		</div>
+		{{/*  </div>  */}}
 	</div>
-	<div class="center tc">
+	<div class="center tc f6">
 		<p class="center tc">Copyright © 2022 Flores Tree Services. All rights reserved. </p>
 	</div>
 
