--- a/src/css/imports/_flexbox.css
+++ b/src/css/imports/_flexbox.css
@@ -14,6 +14,9 @@
 .flex-column  { flex-direction: column; }
 .flex-row     { flex-direction: row; }
 .flex-wrap    { flex-wrap: wrap; }
+.flex-ns {
+  display: flex;
+}
 
 .items-start    { align-items: flex-start; }
 .items-end      { align-items: flex-end; }
