--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -6,7 +6,7 @@
 
 			<div class="center f6">
 				{{/*  <h3 class="f4 b lh-title mb1 primary">Flores Tree Service</h3>  */}}
-				<ul class="mb3 flex-ns center justify-evenly pb4">
+				<ul class="mb3 flex-ns flex-nc center justify-evenly pb4">
 					<li><a href="/" class="link">Home</a></li>
 					<li><a href="/about-us" class="link">About Us</a></li>
 					<li><a href="/services" class="link">Our Services</a></li>
