--- a/site/layouts/partials/image-grid.html
+++ b/site/layouts/partials/image-grid.html
@@ -1,17 +1,24 @@
 <div class="mw7 center ph3 pv4">
 
 	<div class="flex flex-wrap mhn1">
-		<div class="w-100 w-50-ns ph1-ns">
+		<div class="w-101 w-50-ns ph1-ns">
 			<img src="{{ .image1.image }}" alt="{{ .image1.alt }}">
 		</div>
 
-		<div class="w-100 w-50-ns ph1-ns">
+		<div class="w-101 w-50-ns ph1-ns">
 			<img src="{{ .image2.image }}" alt="{{ .image2.alt }}">
 		</div>
 
-		<div class="w-100 ph1-ns h-25">
+		<div class="ph1-ns h-25">
 			<img src="{{ .image3.image }}" alt="{{ .image3.alt }}">
 		</div>
+	</div>
+
+	<div class="tc pv3 bt bb mt3">
+		<a href="/contact" class="btn raise">Contact Us Now!</a>
+		<button class="btn raise">
+			<a href="tel: 8179944652">Call: 817-994-4652</a>
+		</button>
 	</div>
 
 </div>
