--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,4 +1,4 @@
-<nav data-nav class="white bg-primary primary flex justify-between items-center center divider-grey relative">
+<nav data-nav class="white bgr-primary primary flex justify-between items-center center divider-grey relative">
 
 	<!-- Logo -->
 	<a href="/" class="maa maa-ns ma0-m pa3 db mr4-l h-100 flex-none ht mr4-m">
@@ -15,7 +15,7 @@
 		</svg>
 	</div>
 
-	<ul class="flex b nav-menu bg-primary white f6 lh-3">
+	<ul class="flex b nav-menu bgr-primary white f6 lh-3">
 		<li><a href="/about-us" class="pa3 no-underline db">About Us</a></li>
 
 		<li><a href="/services" class="pa3 no-underline db">Our Services</a></li>
