--- a/site/layouts/partials/4-up.html
+++ b/site/layouts/partials/4-up.html
@@ -5,7 +5,7 @@
 
 		<div class="flex-ns flex-wrap mhn2-ns">
 			{{ range .blurbs }}
-				<div class="ph2-ns w-50-ns mb4 flex flex-column items-center">
+				<div class="ph2-ns w-50-ns mb4 flex flex-column-1 items-center">
 					<img src="{{ .image }}" alt="" class="center db mb3" style="width: 240px">
 					<p>{{ .text }}</p>
 				</div>
