--- a/site/layouts/section/about-us.html
+++ b/site/layouts/section/about-us.html
@@ -18,15 +18,15 @@
 {{ end }}
 
 
-<div class="pb4">
+{{/*  <div class="pb4">
   {{ range .Params.testimonials }}
     {{ partial "blockquote" . }}
   {{ end }}
-</div>
+</div>  */}}
 
 <!-- Full-width image -->
 <img src="{{ .Params.full_image }}" alt="" class="db w-100">
 
-{{ partial "table" .Params.pricing }}
+{{/*  {{ partial "table" .Params.pricing }}  */}}
 
 {{ end }}
