--- a/site/layouts/section/contact.html
+++ b/site/layouts/section/contact.html
@@ -3,7 +3,7 @@
 <div class="db">
 	<h1 class="tc f4 b pa3 db primary">CONTACT US</h1>
 </div>
-<div class="ph3 bg-off-white flex flex-column flex-row-ns flex-row-m flex-row-l">
+<div class="ph3 bg-off-white flex flex-column-1 flex-row-ns flex-row-m flex-row-l">
 	<div class="center mw6 pv3 pa4">
 		{{/* <img src="{{ .Params.logo }}" alt="" class="db w4 center pv4"> */}}
 
