--- a/src/css/imports/_styles.css
+++ b/src/css/imports/_styles.css
@@ -11,7 +11,10 @@
   }
   & ul a:hover, & ul a:focus {
     box-shadow: inset 0 -4px 0 var(--white);
+    text-decoration: none;
+    color: var(--white);
   }
+
 }
 
 @media (--breakpoint-large) {
@@ -25,7 +28,9 @@
     
       & ul a:hover,
       & ul a:focus {
-        box-shadow: inset 0 -4px 0 var(--grey-4);
+        box-shadow: inset 0 -4px 0 var(--primary);
+        text-decoration: none;
+        color: var(--white);
       }
   }
 }
