--- a/src/css/imports/_variables.css
+++ b/src/css/imports/_variables.css
@@ -13,6 +13,7 @@
 
 	/* Typography */
 	--font-family: Nunito Sans, -apple-system, BlinkMacSystemFont, 'avenir next', avenir, helvetica, 'helvetica neue', ubuntu, roboto, noto, 'segoe ui', arial, sans-serif;
+	--font-family-2: calluna, serif;
 	--line-height: 1.5;
 
 	--font-size: 18px;
