--- a/src/css/imports/_widths.css
+++ b/src/css/imports/_widths.css
@@ -19,6 +19,7 @@
 .w-80 {  width:  80%; }
 .w-90 {  width:  90%; }
 .w-100 { width: 100%; }
+.w-101 { width: 100%; }
 
 .w-third { width: calc(100% / 3); }
 .w-two-thirds { width: calc(100% / 1.5); }
