Gallery subdomain add

--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -20,7 +20,7 @@
 
 		<li><a href="/services" class="pa3 no-underline db">Our Services</a></li>
 
-		<li><a href="/post" class="pa3 no-underline db">Gallery</a></li>
+		<li><a href="/gallery" class="pa3 no-underline db">Gallery</a></li>
 
 		<li><a href="/contact" class="pa3 no-underline db">Get a Free Quote</a></li>
 	</ul>
