--- a/site/layouts/partials/contact-form.html
+++ b/site/layouts/partials/contact-form.html
@@ -5,7 +5,7 @@ consider adding certification images  */}}
   <h4 class="f3 b lh-title mb3 tc">Schedule a Consultation</h4>
 
   <form name="contact" netlify>
-    <input type="hidden" name="subject" value="New lead from %{formName} (%{submissionId})" />
+    <input type="hidden" name="subject" />
     <div class="flex-l mhn1-l">
       <!-- Name -->
       <div class="ph1-l w-50-l">
