--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -2,6 +2,7 @@
 
   <title>{{ .Title }} | {{ $.Site.Title }}</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+		<link rel="canonical" href="https://florestreeservicedfw.com/">
 
   {{ $stylesheet := .Site.Data.webpack.main }}
   {{ with $stylesheet.css }}
