Button sizing mobile

--- a/site/layouts/partials/image-grid.html
+++ b/site/layouts/partials/image-grid.html
@@ -14,9 +14,9 @@
 		</div>
 	</div>
 
-	<div class="tc pv3 bt bb mt3">
-		<a href="/contact" class="btn raise">Contact Us Now!</a>
-		<button class="btn raise">
+	<div class="tc pv3 bt bb mt3 flex-nc justify-evenly">
+		<a href="/contact" class="btn btn-s raise">Contact Us Now!</a>
+		<button class="btn btn-s raise">
 			<a href="tel: 8179944652">Call: 817-994-4652</a>
 		</button>
 	</div>
