--- a/src/css/imports/_buttons.css
+++ b/src/css/imports/_buttons.css
@@ -1,7 +1,7 @@
-.btn {
+.btn-s {
   display: inline-block;
   padding: 12px 16px 10px;
-  font-size: var(--spacing-medium);
+  font-size: .8rem;
   line-height: 1.25;
   background-color: var(--white);
   border-radius: var(--border-radius);
@@ -11,4 +11,21 @@
   text-align: center;
   box-shadow: inset 0 0 0 2px var(--primary);
   transition: var(--hover-transition);
+}
+
+@media (--breakpoint-not-small) {
+  .btn {
+      display: inline-block;
+      padding: 12px 16px 10px;
+      font-size: var(--spacing-medium);
+      line-height: 1.25;
+      background-color: var(--white);
+      border-radius: var(--border-radius);
+      text-decoration: none;
+      font-weight: var(--bold-font-weight);
+      color: var(--primary);
+      text-align: center;
+      box-shadow: inset 0 0 0 2px var(--primary);
+      transition: var(--hover-transition);
+    }
 }
