CSS and title edit

--- a/site/layouts/partials/2-up.html
+++ b/site/layouts/partials/2-up.html
@@ -14,7 +14,7 @@
 
     <div class="tc">
       {{/*  change path to services  */}}
-      <a href="/services" class="btn raise">See all services</a>
+      <a href="/services" class="btn-s btn raise">See all services</a>
     </div>
   </div>
 </div>
