--- a/site/layouts/partials/4-up.html
+++ b/site/layouts/partials/4-up.html
@@ -13,7 +13,7 @@
 		</div>
 		<div class="tc">
 			{{/* change path to services */}}
-			<a href="/services" class="btn raise">See all services</a>
+			<a href="/services" class="btn-s btn raise">See all services</a>
 		</div>
 	</div>
 </div>
