--- a/site/layouts/partials/sm-banner.html
+++ b/site/layouts/partials/sm-banner.html
@@ -3,12 +3,12 @@
     <div class="flex">
       {{/*  <button class="btn raise">  */}}
         {{/*  <i class="fa fa-phone"></i>  */}}
-        <a href="tel: 8179944652" class="btn raise"><i class="fa fa-phone pa1"></i>Call: 817-994-4652</a>
+        <a href="tel: 8179944652" class="btn-s btn raise"><i class="fa fa-phone pa1"></i>Call: 817-994-4652</a>
       {{/*  </button>  */}}
     </div>
       <div class="flex">
         {{/*  <h1>Get a Free Quote</h1>  */}}
-        <a href="/contact" class="btn raise">Book Now</a>
+        <a href="/contact" class="btn-s btn raise">Book Now</a>
       </div>
   {{/*  </div>  */}}
   </div>
