--- a/src/css/imports/_heights.css
+++ b/src/css/imports/_heights.css
@@ -1,6 +1,6 @@
 .h1 { height: var(--spacing-medium); }
 .h2 { height: 2rem; }
-.h2new { height: 300px }
+.h3new { height: 350px }
 .h3 { height: 4rem; }
 .h4 { height: 8rem; }
 .h5 { height: 16rem; }
@@ -32,6 +32,9 @@
 @media (--breakpoint-not-small) {
   .h1-ns {  height: var(--spacing-medium); }
   .h2-ns {  height: 2rem; }
+    .h2new {
+      height: 300px
+    }
   .h3-ns {  height: 4rem; }
   .h4-ns {  height: 8rem; }
   .h5-ns {  height: 16rem; }
