--- a/site/layouts/partials/short-text.html
+++ b/site/layouts/partials/short-text.html
@@ -4,8 +4,8 @@
     <p class="w-50-l mb0">{{.text}}</p>
   </div>
   <div class="tc pv3">
-    <a href="/contact" class="btn raise">Contact Us Now!</a>
-    <button class="btn raise">
+    <a href="/contact" class="btn-s btn raise">Contact Us Now!</a>
+    <button class="btn-s btn raise">
       <a href="tel: 8179944652">Call: 817-994-4652</a>
     </button>
   </div>
