--- a/site/layouts/partials/text-and-image.html
+++ b/site/layouts/partials/text-and-image.html
@@ -14,7 +14,7 @@
 		</div>
 
 		<div class="tc">
-			<a href="{{.buttonLink}}" class="btn raise">{{.buttonText}}</a>
+			<a href="{{.buttonLink}}" class="btn-s raise">{{.buttonText}}</a>
 		</div>
 
 	</div>
