--- a/site/layouts/partials/4-up.html
+++ b/site/layouts/partials/4-up.html
@@ -1,3 +1,9 @@
+<div class="tc pv3 bt bb mt3 flex-nc justify-evenly">
+	<a href="/contact" class="btn btn-s raise">Contact Us Now!</a>
+	<button class="btn btn-s raise">
+		<a href="tel: 8179944652">Call: 817-994-4652</a>
+	</button>
+</div>
 <div class="bg-off-white pv4">
 	<div class="ph3 mw7 center">
 		<h2 class="f2 b lh-title mb2">{{.heading}}</h2>
