--- a/site/layouts/section/about-us.html
+++ b/site/layouts/section/about-us.html
@@ -2,13 +2,33 @@
 
 {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title) }}
 
-{{ partial "4-up" .Params.intro }}
+  <div class="tc pv3 bb flex-nc justify-evenly">
+    <a href="/contact" class="btn btn-s raise">Contact Us Now!</a>
+    <button class="btn btn-s raise">
+      <a href="tel: 8179944652">Call: 817-994-4652</a>
+    </button>
+  </div>
+
+<div class="mw7 center ph3 pt4 center pv4">
+
+  {{ range $index, $element := .Params.values }}
+  {{ if modBool $index 2 }}
+  {{ partial "media-block" $element }}
+  {{ else }}
+  {{ partial "media-block-reverse" $element }}
+  {{ end }}
+  {{ end }}
+
+</div>
 
 {{ with .Params.main }}
-<div class="mw7 center">
-  <div class="mw6 ph3 mb3">
+<div class="mw7 center tc">
+  <div class="mw6 ph3 mb3 tc center">
     <h3 class="f2 b lh-title mb2">{{ .heading }}</h3>
     <p>{{ .description }}</p>
+    <div class="tc pv3 bb flex-nc justify-evenly">
+      <a href="/services" class="btn-s btn raise">See all services</a>
+    </div>
   </div>
 </div>
 
